--- a/data/Interface.glade
+++ b/data/Interface.glade
@@ -68,6 +68,7 @@
     <property name="width_request">1024</property>
     <property name="height_request">768</property>
     <property name="can_focus">False</property>
+    <property name="window_position">center-always</property>
     <property name="default_width">800</property>
     <property name="default_height">600</property>
     <child>
@@ -75,7 +76,7 @@
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <child>
-          <object class="GtkMenuBar" id="menubar1">
+          <object class="GtkMenuBar" id="menuBar">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="ubuntu_local">True</property>
@@ -139,7 +140,7 @@
                       </object>
                     </child>
                     <child>
-                      <object class="GtkImageMenuItem" id="imagemenuitem5">
+                      <object class="GtkImageMenuItem" id="quitMenuItem">
                         <property name="label">gtk-quit</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
@@ -229,6 +230,7 @@
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <property name="always_show_image">True</property>
+                        <accelerator key="F11" signal="activate"/>
                       </object>
                     </child>
                   </object>
@@ -325,12 +327,14 @@
           <object class="GtkVPaned" id="vpaned1">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="position">512</property>
+            <property name="position">600</property>
             <property name="position_set">True</property>
             <child>
               <object class="GtkHPaned" id="hpaned3">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="position">800</property>
+                <property name="position_set">True</property>
                 <child>
                   <object class="GtkScrolledWindow" id="scrolledwindow1">
                     <property name="width_request">800</property>
@@ -349,7 +353,7 @@
                     </child>
                   </object>
                   <packing>
-                    <property name="resize">False</property>
+                    <property name="resize">True</property>
                     <property name="shrink">True</property>
                   </packing>
                 </child>
@@ -494,7 +498,7 @@
                   </object>
                   <packing>
                     <property name="resize">True</property>
-                    <property name="shrink">True</property>
+                    <property name="shrink">False</property>
                   </packing>
                 </child>
               </object>
