--- a/data/Interface.glade
+++ b/data/Interface.glade
@@ -315,7 +315,7 @@
                                                         <property name="visible">True</property>
                                                         <property name="can_focus">False</property>
                                                         <child>
-                                                          <object class="GtkIconView" id="iconview1">
+                                                          <object class="GtkIconView" id="infoIconView">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">True</property>
                                                           </object>
@@ -330,7 +330,7 @@
                                                   </packing>
                                                 </child>
                                                 <child>
-                                                  <object class="GtkNotebook" id="notebook3">
+                                                  <object class="GtkNotebook" id="infoSelNotebook">
                                                     <property name="visible">True</property>
                                                     <property name="can_focus">True</property>
                                                     <property name="show_tabs">False</property>
@@ -362,7 +362,7 @@
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
                                                             <child>
-                                                            <object class="GtkTextView" id="textview1">
+                                                            <object class="GtkTextView" id="infoTextView">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="editable">False</property>
@@ -398,7 +398,7 @@
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
                                                             <child>
-                                                            <object class="GtkTextView" id="textview2">
+                                                            <object class="GtkTextView" id="traceTextView">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="editable">False</property>
@@ -526,7 +526,7 @@
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">False</property>
                                                 <child>
-                                                  <object class="GtkEventBox" id="eventbox1">
+                                                  <object class="GtkEventBox" id="overviewEventBox">
                                                     <property name="width_request">200</property>
                                                     <property name="height_request">150</property>
                                                     <property name="visible">True</property>
@@ -595,7 +595,7 @@
             <property name="can_focus">False</property>
             <property name="spacing">2</property>
             <child>
-              <object class="GtkLabel" id="label12">
+              <object class="GtkLabel" id="statusLbl">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="xalign">0</property>
