Adds timeback control

--- a/data/Interface.glade
+++ b/data/Interface.glade
@@ -195,6 +195,20 @@
               </packing>
             </child>
             <child>
+              <object class="GtkToolButton" id="stepBackToolBtn">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="use_action_appearance">False</property>
+                <property name="label" translatable="yes">Step Back</property>
+                <property name="use_underline">True</property>
+                <property name="stock_id">gtk-undo</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="homogeneous">True</property>
+              </packing>
+            </child>
+            <child>
               <object class="GtkToolButton" id="stepForwardToolBtn">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
