Add support for the small step

--- a/data/Interface.glade
+++ b/data/Interface.glade
@@ -139,6 +139,20 @@
               </packing>
             </child>
             <child>
+              <object class="GtkToolButton" id="runSlowToolBtn">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="use_action_appearance">False</property>
+                <property name="label" translatable="yes">Run Slow</property>
+                <property name="use_underline">True</property>
+                <property name="stock_id">gtk-media-play</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="homogeneous">True</property>
+              </packing>
+            </child>
+            <child>
               <object class="GtkToolButton" id="pauseToolBtn">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
@@ -214,6 +228,20 @@
                 <property name="can_focus">False</property>
                 <property name="use_action_appearance">False</property>
                 <property name="label" translatable="yes">Step</property>
+                <property name="use_underline">True</property>
+                <property name="stock_id">gtk-redo</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="homogeneous">True</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkToolButton" id="stepForwardSmallToolBtn">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="use_action_appearance">False</property>
+                <property name="label" translatable="yes">Small Step</property>
                 <property name="use_underline">True</property>
                 <property name="stock_id">gtk-redo</property>
               </object>
