--- a/data/Interface.glade
+++ b/data/Interface.glade
@@ -234,7 +234,7 @@
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <child>
-              <object class="GtkViewport" id="viewport1">
+              <object class="GtkViewport" id="animationViewport">
                 <property name="width_request">800</property>
                 <property name="height_request">600</property>
                 <property name="visible">True</property>
