--- a/data/Interface.glade
+++ b/data/Interface.glade
@@ -279,7 +279,7 @@
                                 <property name="left_padding">12</property>
                                 <property name="right_padding">10</property>
                                 <child>
-                                  <object class="GtkNotebook" id="notebook1">
+                                  <object class="GtkNotebook" id="infoNotebook">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="tab_pos">left</property>
@@ -640,7 +640,7 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkHScale" id="hscale1">
+                  <object class="GtkHScale" id="speedScale">
                     <property name="width_request">200</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
