Makes the event boxes part of the gloss widget. Removes fields from the view.

--- a/data/Interface.glade
+++ b/data/Interface.glade
@@ -586,19 +586,6 @@
                                                 <property name="height_request">150</property>
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">False</property>
-                                                <child>
-                                                  <object class="GtkEventBox" id="overviewEventBox">
-                                                    <property name="width_request">200</property>
-                                                    <property name="height_request">150</property>
-                                                    <property name="visible">True</property>
-                                                    <property name="sensitive">False</property>
-                                                    <property name="can_focus">False</property>
-                                                    <property name="above_child">True</property>
-                                                    <child>
-                                                      <placeholder/>
-                                                    </child>
-                                                  </object>
-                                                </child>
                                               </object>
                                             </child>
                                           </object>
@@ -717,6 +704,22 @@
             <property name="fill">True</property>
             <property name="position">3</property>
           </packing>
+        </child>
+      </object>
+    </child>
+  </object>
+  <object class="GtkWindow" id="window1">
+    <property name="can_focus">False</property>
+    <child>
+      <object class="GtkEventBox" id="overviewEventBox">
+        <property name="width_request">200</property>
+        <property name="height_request">150</property>
+        <property name="visible">True</property>
+        <property name="sensitive">False</property>
+        <property name="can_focus">False</property>
+        <property name="above_child">True</property>
+        <child>
+          <placeholder/>
         </child>
       </object>
     </child>
