--- a/data/Interface.glade
+++ b/data/Interface.glade
@@ -18,7 +18,7 @@
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
-  <object class="GtkWindow" id="flowChartWindow">
+  <!--object class="GtkWindow" id="flowChartWindow">
     <property name="can_focus">False</property>
     <child>
       <object class="GtkLabel" id="label12">
@@ -27,7 +27,7 @@
         <property name="label" translatable="yes">To be completed</property>
       </object>
     </child>
-  </object>
+  </object-->
   <object class="GtkImage" id="image20">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -92,7 +92,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="ubuntu_local">True</property>
-                    <child>
+                    <!--child>
                       <object class="GtkMenuItem" id="showFlowChartMenuItem">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
@@ -100,7 +100,7 @@
                         <property name="label" translatable="yes">Show flowchart</property>
                         <property name="use_underline">True</property>
                       </object>
-                    </child>
+                    </child-->
                     <child>
                       <object class="GtkImageMenuItem" id="fullScreenMenuItem">
                         <property name="label">gtk-fullscreen</property>
